[FIX] mail: visible hover effect on chat window actions
Dark theme actions hover effect was barely noticeable.
This commit improves effect to match with other parts of UI such
as composer actions.

closes odoo/odoo#180647

--- a/addons/mail/static/src/core/common/chat_window.dark.scss
+++ b/addons/mail/static/src/core/common/chat_window.dark.scss
@@ -3,7 +3,5 @@
 }
 
 .o-mail-ChatWindow-command {
-    &:hover, &.o-active {
-        background-color: $gray-200;
-    }
+    --mail-ChatWindow-commandHoverBg: #{mix($gray-200, $gray-300)};
 }
